<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:elevation="7dp"
    tools:context=".loginActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="221dp"
        android:layout_height="200dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/login_in_your_account"
        android:fontFamily="cursive"
        android:textColor="@color/red"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="10dp"
        android:textColor="@color/black"
        android:fontFamily="@font/almendra"
        android:elevation="7dp"
        android:ems="10"
        android:hint="@string/email_or_password"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/EditPassword"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittextshape"
        android:textColor="@color/black"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="10dp"
        android:elevation="7dp"
        android:fontFamily="@font/almendra"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="@+id/EmailAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/EmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddress" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="or"
        android:textSize="20sp"
        android:fontFamily="@font/almendra"
        app:layout_constraintEnd_toEndOf="@+id/EditPassword"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/EditPassword"
        app:layout_constraintTop_toBottomOf="@+id/EditPassword" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Continue with "
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/almendra"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/LoginGooglebutton"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/google"
        android:text="@string/google"
        android:fontFamily="@font/almendra"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/button3"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/facebook"
        android:text="@string/facebook"
        android:fontFamily="@font/almendra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/LoginGooglebutton"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="180dp"
        android:layout_height="57dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/red"
        android:text="LOGIN"
        android:fontFamily="@font/almendra"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/LoginGooglebutton"
        app:layout_constraintTop_toBottomOf="@+id/LoginGooglebutton" />

    <TextView
        android:id="@+id/textveiwsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_account"
        android:textColor="@color/blue"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/LoginButton"
        app:layout_constraintStart_toStartOf="@+id/LoginButton"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>